--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <link rel="STYLESHEET" type="text/css" href="default.css">
 </head>
 <body>
+<a href="https://github.com/tgerstendoerfer/above"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a>
 
 <p><img src="web-header.jpg" alt="ABOVE - Autonomous Battle Over Endor" width="500" height="150" border="0"></p>
 <p class="caption">
