complete rewrite of the project page, now in English

--- a/index.html
+++ b/index.html
@@ -1,112 +1,64 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html>
 <html>
 <head>
 <title>ABOVE - Autonomous Battle Over Endor</title>
-<link rel="STYLESHEET" type="text/css" href="default.css">
+<link rel="stylesheet" href="default.css">
+<script>
+document.createElement('nav');
+document.createElement('main');
+</script>
 </head>
 <body>
+<nav>
+<img src="web-header.jpg" alt="ABOVE - Autonomous Battle Over Endor" width="500" height="150" border="0">
 <a href="https://github.com/tgerstendoerfer/above"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a>
+</nav>
 
-<p><img src="web-header.jpg" alt="ABOVE - Autonomous Battle Over Endor" width="500" height="150" border="0"></p>
-<p class="caption">
-Projektarbeit im 4. Semester des Informatikstudiums an der Fachhochschule Aargau.
-</p>
-<br/>
-<br/>
-
-<div class="menu">
-<h2>&nbsp;</h2>
-<ul>
-<li><a href="#download">Download</a></li>
-<li><a href="screenshots.html">Screenshots</a></li>
-<li><a href="https://github.com/tgerstendoerfer/above/raw/master/doc/above-1-0.pdf">Projektbericht</a>
-	(<a href="https://github.com/tgerstendoerfer/above/raw/master/doc/above-book-cover.pdf">Buchumschlag</a>)
-	</li>
-<li><a href="https://github.com/tgerstendoerfer/above/raw/master/doc/above-20040630.pdf">Projektpr&auml;sentation</a>
-	vom 30. Juni 2004
-	</li>
-<li><a href="timeframe.html">Zeitplan</a></li>
-</ul>
-<h2>Screenshot</h2>
-<p align="center">
-<a href="screenshots.html"><img
-	src="screenshot-main.jpg" alt="Screenshots"
-	width="130" height="110"
-	border="0"/></a>
-</p>
-</div>
-
-<div class="main">
+<main>
 
 <p>
-Das Programm ABOVE ist eine Agentenbasierte Simulation des aus
-den <em>Star Wars</em>-Filmen bekannten Kampf zwischen Raumschiffen der
-Rebellenallianz und des Galaktischen Imperiums.
-Und so ganz nebenbei dient es als Spielwiese f&uuml;r den Umgang mit
-einerseits der 3D-Programmierung, und andererseits für erste Erfahrung
-mit der KI-Entwicklung.
+ABOVE, Autonomous Battle Above Endor, is an agent-based simulation of a
+battle between starships of the Rebel Alliance and those of the Galactic
+Empire from the well-known <em>Star Wars</em> movies.
 </p>
+
 <p>
-Geschrieben wurde ABOVE in Java unter Verwendung von Java3D.
+It was originally written in 2004 as a 3D and AI playground by a group of
+Computer Science students at the <a href="http://www.fhnw.ch">University
+of Applied Sciences, Aargau</a>, in Brugg-Windisch as project work for
+their 4th semester Software Engineering course.
 </p>
 
-<p style="margin-left: 40px; margin-top: 7px;"><img
-	src="splash.jpg" width="400" height="280" border="0"
-	alt="ABOVE Splash Screen"></p>
-
-<h2><a name="download">Download</a></h2>
-<ul>
-<li>
-	<a href="http://www.gerstendoerfer.com/download/above-1.0.zip"/>above-1.0.zip</a> (3.2 MB)
-	Version 1.0 inklusive Dokumentation und Quellcode
-</li>
-</ul>
-
-<h2>Projektstatus</h2>
-<p>15. Dezember 2013:
-ABOVE ist auf <a href="https://github.com/tgerstendoerfer/above">GitHub</a>.
-Falls du interessiert bist kannst du gerne mit uns Kontakt aufnehmen.
-</p>
-<p>7. Juli 2004:
-Das Semester ist vorbei, das Projekt abgeschlossen, und wir überlegen nun,
-ob wir ABOVE open-sourcen und/oder als Grundlage für die nächste Semesterarbeit
-verwenden wollen.
+<p>
+The program is written in Java using Java3D, with the source code available
+from the <a href="https://github.com/tgerstendoerfer/above/">GitHub project
+page</a>.
 </p>
 
-<h2>Projekt-Team</h2>
+<h2>Documents (in German)</h2>
 <ul>
-<li>Thomas Gerstend&ouml;rfer</li>
-<li>Thomas Hellstern</li>
-<li>Lukas Kellenberger</li>
-<li>Michael M&uuml;hlebach</li>
+<li><a href="https://github.com/tgerstendoerfer/above/raw/master/doc/above-1-0.pdf">Project Report</a>
+	(<a href="https://github.com/tgerstendoerfer/above/raw/master/doc/above-book-cover.pdf">Cover</a>)
+	</li>
+<li><a href="https://github.com/tgerstendoerfer/above/raw/master/doc/above-20040630.pdf">Project Presentation</a>
+	of June 30, 2004
+	</li>
 </ul>
 
+<p><img src="screenshot-main.jpg"
+	alt="Screenshot of ABOVE right after the program start"
+	width="650" height="550"/></p>
+<br>
+<p><img src="screenshot-explode.jpg"
+	alt="Screenshot of an exploding starfighter in ABOVE"
+	width="650" height="550"/></p>
+<br>
+<p><img src="screenshot-simpleship.jpg"
+	alt="Screenshot of ABOVE with simplified starfighters for slower systems"
+	width="650" height="550"/></p>
+<br>
 
-<h2>&Auml;hnliche Programme / N&uuml;tzliche Links</h2>
-<ul>
-<li><a target="_blank" href="http://www.red3d.com/cwr/boids/">Boids: Background and Update</a>
-	von Craig Reynolds
-	</li>
-	<li><a target="_blank" href="http://java.sun.com/products/java-media/3D/index.jsp">Java
-	3D</a>
-	(<a target="_blank" href="http://java.sun.com/products/java-media/3D/forDevelopers/J3D_1_3_API/j3dapi/index.html">API</a>)
-	</li>
-	<li><a target="_blank" href="http://www.j3d.org/">J3D.org - The Java 3D Community Site</a>
-	<ul>
-		<li><a traget="_blank" href="http://code.j3d.org/impl/navigation.html">Navigation Utilities Implementation</a></li>
-	</ul>
-	</li>
-	<li>
-		<a target="_blank" href="http://www.gamedev.net">gamedev.net - Resourcesite for Game development</a>
-	</li>
-	<li><a target="_blank" href="http://www.brockeng.com/VMech/Time/PlanJ/Clocks.htm">Java3D Simulation Clocks</a> at VMech.com</li>
-	<li><a target="_blank" href="http://www.scifi-meshes.com/">Site for 3d-models and meshes</a></li>
-</ul>
-
-
-<p class="footer">ABOVE &copy; 2004 T. Gerstend&ouml;rfer, T. Hellstern, L. Kellenberger, M. M&uuml;hlebach, Fachhochschule Aargau.</p>
-
-</div>
+</main>
 
 </body>
 </html>
