no longer link to above files on http://gerstendoerfer.com

--- a/404.html
+++ b/404.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<title>404 Nicht Gefunden</title>
-		<link rel="STYLESHEET" type="text/css" href="http://www.gerstendoerfer.com/above/default.css">
-		<style type="text/css">
+		<link rel="stylesheet" href="/above/default.css">
+		<style>
 			p, h1 {
 				width: 500px;
 				margin-left: auto;
@@ -13,8 +13,8 @@
 	</head>
 	<body>
 
-		<p><a href="http://www.gerstendoerfer.com/above/index.html"
-			><img src="http://www.gerstendoerfer.com/above/web-header.jpg"
+		<p><a href="/above/"
+			><img src="/above/web-header.jpg"
 			alt="ABOVE - Autonomous Battle Over Endor"
 			width="500" height="150" border="0"></a></p>
 
@@ -26,10 +26,7 @@
 			informieren Sie den <a href="mailto:thomas@gerstendoerfer.com"
 			>Webmaster dieser Site</a>, falls Sie einen Fehler vermuten.
 		</p>
-		<p>
-			Weiter zur <a href="http://www.gerstendoerfer.com/above/index.html"
-			>ABOVE Homepage</a>.
-		</p>
+		<p>Weiter zur <a href="/above/">ABOVE Homepage</a>.</p>
 
 	</body>
 </html>
